--- a/_config.next.yml
+++ b/_config.next.yml
@@ -200,7 +200,7 @@ language_switcher: false
 
 footer:
   # Specify the year when the site was setup. If not defined, current year will be used.
-  #since: 2021
+  since: 2019
 
   # Icon between year and copyright info.
   icon:
@@ -357,11 +357,11 @@ codeblock:
   # Code Highlight theme
   # All available themes: https://theme-next.js.org/highlight/
   theme:
-    light: vs2015
-    dark: vs2015
+    light: monokai-sublime
+    dark: monokai-sublime
   prism:
-    light: prism
-    dark: prism-dark
+    light: prism-vsc-dark-plus
+    dark: prism-vsc-dark-plus
   # Add copy button on codeblock
   copy_button:
     enable: true
